// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`instantiate a ViewBill class 1`] = `
Object {
  "id": "test",
}
`;

exports[`test a ViewBill DOM manipulation 1`] = `
<div
  class="test-div"
/>
`;

exports[`test a ViewBill DOM manipulation 2`] = `
<div
  class="new-class"
>
  <span>
    ViewBill entry
  </span>
</div>
`;

exports[`test a ViewBill DOM return 1`] = `
<div>
  <h1>
    Hello world
  </h1>
</div>
`;

exports[`test person DOM does not update 1`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <span
    class="p-type"
  >
    more
  </span>
   
  <span
    class="p-amount"
  >
    10
  </span>
</li>
`;

exports[`test person DOM does not update 2`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <span
    class="p-type"
  >
    more
  </span>
   
  <span
    class="p-amount"
  >
    10
  </span>
</li>
`;

exports[`test person DOM update 1`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <span
    class="p-type"
  >
    more
  </span>
   
  <span
    class="p-amount"
  >
    10
  </span>
</li>
`;

exports[`test person DOM update 2`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <span
    class="p-type"
  >
    split
  </span>
   
  <span
    class="p-amount"
  >
    12
  </span>
</li>
`;

exports[`test person template injection 1`] = `
<li
  p-id="1462361249717"
>
  To pay 
  <span
    class="p-type"
  >
    more
  </span>
   
  <span
    class="p-amount"
  >
    10
  </span>
</li>
`;
